--- a/style.css
+++ b/style.css
@@ -18,7 +18,12 @@ body {
 #white-rectangle {
     background-color: gray;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5), inset 8px 0 8px -5px rgba(0, 0, 0, 0.5), inset -8px 0 8px -5px rgba(0, 0, 0, 0.5);
+    box-shadow:
+        0 0 10px rgba(0, 0, 0, 0.5),
+        inset 8px 0 8px -5px rgba(0, 0, 0, 0.5),
+        inset -8px 0 8px -5px rgba(0, 0, 0, 0.5),
+        inset 0 8px 8px -5px rgba(0, 0, 0, 0.5),
+        inset 0 -8px 8px -5px rgba(0, 0, 0, 0.5);
     width: calc(8.5 * 96px);
     /* 1 inch = 96 CSS pixels */
     height: calc(11 * 96px);
@@ -34,7 +39,6 @@ body {
 /* Center Image styling */
 #center-graph {
     background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5), inset 8px 0 8px -5px rgba(0, 0, 0, 0.5), inset -8px 0 8px -5px rgba(0, 0, 0, 0.5);
     padding: 10px;
     width: 80%;
     height: 80%;
